# UWebBrowser

./: .gitignore  README.md  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  idea.yml
.github/workflows/: ci.yml  release.yml
docs/: RELEASING.md  WIDGETS.md
src/: App.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: cache.rs  default_browser.rs  discovery.rs  downloads.rs  extensions.rs  github.rs  history.rs  http.rs  itch.rs  ledger.rs  lib.rs  main.rs  news.rs  os.rs  sales.rs  stats.rs  sysmon.rs  tabs.rs  terminal.rs  unreal.rs  webext.rs
src-tauri/src/passwords/: content.js  crypto.rs  inject.rs  local.rs  mod.rs  origin.rs  proton.rs  provider.rs
src-tauri/tests/: discovery_live.rs
src-tauri/windows/: hooks.nsi
src/components/: BrowserPrompts.tsx  Dashboard.tsx  DefaultBrowserPrompt.tsx  DevtoolsDock.tsx  Discover.tsx  DownloadShelf.tsx  Downloads.tsx  ErrorBoundary.tsx  ExtensionBar.tsx  FeedbackDialog.tsx  FindBar.tsx  GameFinder.tsx  History.tsx  LinkCard.tsx  PassPanel.tsx  PassSaveBanner.tsx  PlatformCheckList.tsx  SearchField.tsx  Settings.tsx  Setup.tsx  ShortcutsDialog.tsx  Sidebar.tsx  StarNudge.tsx  TerminalView.tsx  TitleBar.tsx  Toolbar.tsx  UnrealHub.tsx  WidgetShop.tsx  Workbar.tsx
src/components/ui/: button.tsx  card.tsx  chip-group.tsx  confirm-button.tsx  context-menu.tsx  dismiss-layer.tsx  empty-state.tsx  favicon.tsx  icon-button.tsx  input.tsx  label.tsx  live-dot.tsx  nudge-card.tsx  overlay.ts  page-header.tsx  page-shell.tsx  progress.tsx  prompt.tsx  rail-button.tsx  section.tsx  select.tsx  site-row.tsx  skeleton.tsx  sparkline.tsx  spinner.tsx  status-page.tsx  table.tsx  tag.tsx  textarea.tsx
src/hooks/: use-async.ts  use-build-job.ts  use-confirm.ts  use-dismissable.ts  use-engines.ts  use-escape.ts  use-focus-trap.ts  use-github-stars.ts  use-platform-check.ts  use-polled.ts  use-provider.ts  use-timed-flag.ts  use-unreal-state.ts
src/lib/: build-job.ts  config.ts  dashboard.ts  discover.ts  downloads.ts  engines.ts  format.test.ts  format.ts  github.ts  history.ts  ipc.ts  list-ops.test.ts  list-ops.ts  pages.test.ts  pages.ts  passwords.ts  platforms.ts  sales.test.ts  sales.ts  session.ts  settings.ts  steam-players.ts  steam.ts  storage.ts  terminal.ts  unreal.ts  updater.ts  url.test.ts  url.ts  utils.ts  widget-shop.ts  workbar.ts  zoom.ts
src/widgets/: authors.ts  data.ts  registry.ts  shared.tsx  types.ts
src/widgets/dashboard/: build.tsx  buzz.tsx  define.ts  epic-free.tsx  game.tsx  github.tsx  index.tsx  itch-revenue.tsx  itch.tsx  news.tsx  revenue.tsx  shared.tsx  steam-list.tsx  workspace.tsx
src/widgets/workbar/: build.tsx  define.ts  index.tsx  itch-revenue.tsx  itch.tsx  links.tsx  revenue.tsx  shared.tsx  steam-game.tsx  steam-players.tsx  steam.tsx  system.tsx
