[package]
name = "uwebbrowser"
version = "0.6.8"
description = "The web browser for Unreal Engine developers."
authors = ["USourceControl"]
license = "MIT"
edition = "2021"

[lib]
name = "uwebbrowser_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["unstable"] }
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = "2"
# default-features off drops the schannel/native-tls stack; we only use rustls.
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
urlencoding = "2"
# RSS/Atom parsing for the dashboard news widgets.
quick-xml = "0.37"
# Feed date parsing only (RFC 2822 + RFC 3339); no clock, no timezone db.
chrono = { version = "0.4", default-features = false, features = ["std"] }
sysinfo = "0.33"
# ConPTY-backed pseudo terminals for the in-browser terminal tabs.
portable-pty = "0.9"
nvml-wrapper = "0.10"
base64 = "0.22"
# Unpack .crx downloads (a ZIP behind a signed header) for Web Store installs.
zip = { version = "2", default-features = false, features = ["deflate"] }
# Rewrite the one extension self-check WebView2 misreports (see extensions.rs).
regex = "1"
# Derive an extension's canonical id from its CRX public key to pin `key`.
sha2 = "0.10"

[target.'cfg(windows)'.dependencies]
winreg = "0.55"
# The Steamworks publisher key is a financial credential; it goes in the
# Windows Credential Manager, never in localStorage. See src/sales.rs.
keyring = { version = "3", features = ["windows-native"] }
# WebView2 native browser-extension APIs (AddBrowserExtension /
# GetBrowserExtensions on ICoreWebView2Profile7). Versions match what
# tauri/wry already pull in, so no second copy is compiled.
webview2-com = "0.38"
windows = { version = "0.61", features = [
    "Win32_System_Com",
    "Win32_UI_Input_KeyboardAndMouse",
    # ShellExecuteW, to hand deep links (mailto:, steam://, …) to the OS.
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-window-state = "2"

[dev-dependencies]
tokio = { version = "1", features = ["rt", "net", "time"] }

[profile.release]
codegen-units = 1
lto = true
opt-level = 3
strip = true
